<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/screen_margin">

        <!-- Details -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_details"
            android:textAppearance="@style/TextAppearance.MusicRoom.Label" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_m"
            android:hint="@string/field_name"
            app:counterEnabled="true"
            app:counterMaxLength="80">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"
                android:maxLength="80" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/description_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_s"
            android:hint="@string/field_description">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/description_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences|textMultiLine"
                android:maxLength="500"
                android:minLines="2" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Visibility -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/section_gap"
            android:text="@string/label_visibility"
            android:textAppearance="@style/TextAppearance.MusicRoom.Label" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_m"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <include
                android:id="@+id/option_public"
                layout="@layout/view_option_compact"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="6dp"
                android:layout_weight="1" />

            <include
                android:id="@+id/option_private"
                layout="@layout/view_option_compact"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_weight="1" />
        </LinearLayout>

        <!-- Edit license -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/section_gap"
            android:text="@string/label_edit_license"
            android:textAppearance="@style/TextAppearance.MusicRoom.Label" />

        <include
            android:id="@+id/option_everyone"
            layout="@layout/view_option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_m" />

        <include
            android:id="@+id/option_invited"
            layout="@layout/view_option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" />

        <Button
            android:id="@+id/create_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_xxl"
            android:text="@string/create_button" />

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_s"
            android:indeterminate="true"
            android:visibility="invisible" />
    </LinearLayout>
</ScrollView>
